objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>A_revisar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A revisar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aprovisiona__c</fullName>
        <label>Aprovisiona</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disparo__c</fullName>
        <label>Disparo</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN_QR__c</fullName>
        <formula>IMAGE( &quot;http://chart.apis.google.com/chart?cht=qr&amp;chs=125x125&amp;chld=H&amp;chl=&quot;&amp;   PricebookEntry.Product2.ProductCode , &quot;Barcode&quot;,100,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAN (QR)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN__c</fullName>
        <formula>image(&quot;http://www.aslambari.com/barcode.php?barcode=&quot; &amp; PricebookEntry.Product2.ProductCode ,&quot;Codigo de barras&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_externo__c</fullName>
        <externalId>true</externalId>
        <label>Id externo</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price_OLD__c</fullName>
        <label>List Price OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List__c</fullName>
        <label>List Price old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PVP_con_IVA__c</fullName>
        <formula>PricebookEntry.UnitPrice  *(1+ PricebookEntry.Product2.tax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVP con IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PVP_con_IVA_editable__c</fullName>
        <label>PVP con IVA (editable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Palets__c</fullName>
        <formula>Quantity / Product2.Nproductos_palet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Palets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_total_con_desc__c</fullName>
        <formula>Quantity *  PVP_con_IVA_editable__c *(1- Discount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio total con desc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>PricebookEntry.Product2.tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impuesto (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>